# glamspa

./: .env.example  .gitignore  Procfile  fabfile.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  uwsgi.ini  webpack-stats.json  webpack.config.js
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20200517_2229.py
assets/js/: app.js
assets/js/components/: SolicitarCita.vue  SolicitarCitaYa.vue
assets/scss/: app.scss  backgrounds.scss  fonts.scss  footer.scss
cejas/: settings.py  urls.py  wsgi.py
confs/: django-glam.service  extra.conf
staticfiles/: staticfiles.json
staticfiles/bundles/: main-09a0ae8296bfa627b19c.64e61d50bc7f.js  main-196f1616d773a03734c8.ebec9061f00b.css  main-196f1616d773a03734c8.js  main-3c5a534f11f6c3150970.b54dd560d89a.js  main-3c5a534f11f6c3150970.css  main-a3cd2f52127b2b662dbc.7b363e9bb75f.js  main-ab9c3c795a65d212ec8d.1d513ada6261.js
templates/: 404.html  500.html  contacto.html  index.html  nosotros.html  sedes.html
templates/garantias/: garantias.html
templates/layouts/: base.html
templates/partials/: footer.html  navbar.html
templates/seminarios/: diseno-de-cejas.html  lifting-de-pestanas.html  microblanding.html  micropigmentacion-completa.html
templates/servicios/cejas/: borrado-tatuajes-ceja.html  cejas-base.html  cejas-cera.html  cejas-compacta.html  cejas-con-hilo.html  correcion-tatuajes-cejas.html  efecto-polvo.html  laminado-cejas.html  mapa-cejas.html  maquillaje-cejas.html  microblading.html  micropigmentacion.html  microshading.html  (+1 more)
(+53 files in other folders)
