[tool.poetry]
name = "glam"
version = "0.1.0"
description = ""
authors = ["Ignacio Del Nardo <ignacioguerra111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
uwsgi = "^2.0"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8"
django-webpack-loader = "^0.6.0"
django-grappelli = "^2.13"
gunicorn = "^20.0"
whitenoise = "^4.1"
pillow = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
